--- a/index.ipynb
+++ b/index.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,9 @@
    "metadata": {},
    "source": [
     "pour installer les bibliothéques `numpy` `matplotlib` et `pandas` \n",
-    "taper les commandes suivantes \n",
-    "`pip install "
+    "taper les commandes suivantes dans une cellule code de jupyter ou dans un terminal anaconda prompt \n",
+    "\n",
+    "`pip install pandas numpy matplotlib` "
    ]
   },
   {
@@ -44,11 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 6)\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv('Data/dataset.csv')\n",
+    "df = pd.read_csv('Data/new_purchases.csv')\n",
     "df.head()\n",
     "print(df.shape)\n"
    ]
@@ -58,7 +67,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
